--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -48,7 +48,7 @@ Gradle 9 requires Java 17 or higher to run the Gradle Daemon.
 This is a breaking change from previous versions, which supported Java 8 and Java 11.
 
 Your project can still target lower Java versions using <<toolchains.adoc#toolchains, Toolchains>>.
-The Gradle Client can still run on Java 8.
+The link:https://github.com/gradle/gradle-client[Gradle Clients] (launcher, wrapper, etc.) can still run on Java 8.
 
 For more, see the <<#minimum_daemon_jvm_version,Running Gradle on older JVMs>> section below.
 
