--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -150,7 +150,7 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations-do/groovy
 `<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:caching,#caching>>`
 
 [[avoid_provider_get_outside_task_action]]
-== Do not call `get()`` on a Provider outside of a Task action
+== Do not call `get()`` on a Provider outside a Task action
 
 When configuring tasks and extensions do not call link:{javadocPath}/org/gradle/api/provider/Provider.html#get()[`get()`] on a provider, use link:{javadocPath}/org/gradle/api/provider/Provider.html#map(org.gradle.api.Transformer)[`map()`], or link:{javadocPath}/https://docs.gradle.org/nightly/javadoc/org/gradle/api/provider/Provider.html#flatMap(org.gradle.api.Transformer)[`flatMap()`] instead.
 
@@ -170,8 +170,8 @@ It is preferable to avoid explicitly evaluating a `Provider` at all, and deferri
 Here is a task that writes an input `String` to a file:
 
 ====
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/kotlin",files="build.gradle.kts[tags=provider-get-task-setup]"]
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/groovy",files="build.gradle[tags=provider-get-task-setup]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-avoid/kotlin",files="build.gradle.kts[tags=provider-get-task-setup]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-avoid/groovy",files="build.gradle[tags=provider-get-task-setup]"]
 ====
 
 <1> Using `Provider.get()` in the task action
@@ -182,8 +182,8 @@ include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/gr
 You could call `get()` at configuration time to set up this task:
 
 ====
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/kotlin",files="build.gradle.kts[tags=avoid-this]"]
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/groovy",files="build.gradle[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-avoid/kotlin",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-avoid/groovy",files="build.gradle[tags=avoid-this]"]
 ====
 
 <1> *Reading the value of `currentEnvironment` at configuration time*: This value might change by the time the task start executing.
@@ -194,8 +194,8 @@ include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/gr
 Instead, you should explicitly wire task inputs and outputs like this:
 
 ====
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/kotlin",files="build.gradle.kts[tags=do-this]"]
-include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/groovy",files="build.gradle[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-do/kotlin",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction-do/groovy",files="build.gradle[tags=do-this]"]
 ====
 
 <1> *Using `map()` to transform `currentEnvironment`*: `map` transform runs only when the value is read.
@@ -208,7 +208,7 @@ include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/gr
 === Tags
 
 `<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:inputs-and-outputs,#inputs-and-outputs>>`
-=======
+
 [[group_describe_tasks]]
 == Group and Describe custom Tasks
 
