--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -152,7 +152,7 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations-do/groovy
 [[avoid_provider_get_outside_task_action]]
 == Do not call `get()`` on a Provider outside a Task action
 
-When configuring tasks and extensions do not call link:{javadocPath}/org/gradle/api/provider/Provider.html#get()[`get()`] on a provider, use link:{javadocPath}/org/gradle/api/provider/Provider.html#map(org.gradle.api.Transformer)[`map()`], or link:{javadocPath}/https://docs.gradle.org/nightly/javadoc/org/gradle/api/provider/Provider.html#flatMap(org.gradle.api.Transformer)[`flatMap()`] instead.
+When configuring tasks and extensions do not call link:{javadocPath}/org/gradle/api/provider/Provider.html#get()[`get()`] on a provider, use link:{javadocPath}/org/gradle/api/provider/Provider.html#map(org.gradle.api.Transformer)[`map()`], or link:{javadocPath}/org/gradle/api/provider/Provider.html#flatMap(org.gradle.api.Transformer)[`flatMap()`] instead.
 
 === Explanation
 
