--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -42,15 +42,17 @@ The previous step will help you identify potential problems by issuing deprecati
 === Language, JDK, and DSL changes
 
 [[java-17]]
-==== Java 17 is now required
+==== Java 17 is required
 
 Gradle 9 requires Java 17 or higher to run the Gradle Daemon.
-This is a breaking change from previous versions, which supported Java 8 and Java 11.
+This is a breaking change from previous versions, which supported Java 8 and higher.
 
-Your project can still target lower Java versions using <<toolchains.adoc#toolchains, Toolchains>>.
-The link:https://github.com/gradle/gradle-client[Gradle Clients] (launcher, wrapper, etc.) can still run on Java 8.
+Your build can still target lower Java versions using <<toolchains.adoc#toolchains, Toolchains>> for compilation, testing and other workers (Checkstyle, Javadoc, etc).
 
+The <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle wrapper>> and command-line launcher will run with Java 8 until it needs to start a Gradle daemon.
 For more, see the <<#minimum_daemon_jvm_version,Running Gradle on older JVMs>> section below.
+
+<<tooling_api.adoc#embedding,Gradle Tooling API>> remains compatible with Java 8 and higher.
 
 [[kotlin-2]]
 ==== Upgrade to Kotlin 2.1.21
