--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -41,18 +41,18 @@ The previous step will help you identify potential problems by issuing deprecati
 
 === Language, JDK, and DSL changes
 
-[[java-17]]
-==== Java 17 is required
+[[jvm-17]]
+==== Java Virtual Machine (JVM) 17 or higher is required
 
-Gradle 9 requires Java 17 or higher to run the Gradle Daemon.
-This is a breaking change from previous versions, which supported Java 8 and higher.
+Gradle 9 requires JVM 17 or higher to run the Gradle Daemon.
+This is a breaking change from previous versions, which supported JVM 8 and higher.
 
-Your build can still target lower Java versions using <<toolchains.adoc#toolchains, Toolchains>> for compilation, testing and other workers (Checkstyle, Javadoc, etc).
+Your build can still target lower JVM versions using <<toolchains.adoc#toolchains, Toolchains>> for compilation, testing and other workers (Checkstyle, Javadoc, etc).
 
-The <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle wrapper>> and command-line launcher will run with Java 8 until it needs to start a Gradle daemon.
+The <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle wrapper>> and command-line launcher can run with JVM 8, but it still requires a newer JVM to start the build.
 For more, see the <<#minimum_daemon_jvm_version,Running Gradle on older JVMs>> section below.
 
-<<tooling_api.adoc#embedding,Gradle Tooling API>> remains compatible with Java 8 and higher.
+<<tooling_api.adoc#embedding,Gradle Tooling API>> and <<test_kit#test_kit, TestKit>> remain compatible with JVM 8 and higher.
 
 [[kotlin-2]]
 ==== Upgrade to Kotlin 2.1.21
