--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -44,7 +44,7 @@ The previous step will help you identify potential problems by issuing deprecati
 [[jvm-17]]
 ==== Java Virtual Machine (JVM) 17 or higher is required
 
-Gradle 9 requires JVM 17 or higher to run the Gradle Daemon.
+Gradle 9 requires a Java Virtual Machine (JVM) version 17 or higher to run the Gradle Daemon.
 This is a breaking change from previous versions, which supported JVM 8 and higher.
 
 Your build can still target lower JVM versions using <<toolchains.adoc#toolchains, Toolchains>> for compilation, testing and other workers (Checkstyle, Javadoc, etc).
