--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
@@ -48,6 +48,7 @@ The items in this guide are meant to be _brief_, _understandable_, and _actionab
 - <<best_practices_dependencies.adoc#best_practices_for_dependencies,Best Practices for Dependencies>>
 - <<best_practices_tasks.adoc#best_practices_for_tasks,Best Practices for Tasks>>
 - <<best_practices_performance.adoc#best_practices_for_performance,Best Practices for Performance>>
+- <<best_practices_security.adoc#best_practices_for_security,Best Practices for Security>>
 
 == Other Advice
 
