--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -793,7 +793,7 @@ As ab added benefit, this will allow you to reference the project by the shorter
 =====
 [source, kotlin]
 ----
-├── settings.gradle
+├── settings.gradle.kts
 ├── app/ // <1>
 │   ├── build.gradle
 │   └── src/
