--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -772,7 +772,7 @@ When using a hierarchical directory structure to organize your Gradle projects, 
 When you use the link:{groovyDslPath}/org.gradle.api.initialization.Settings.html#org.gradle.api.initialization.Settings:include(java.lang.Iterable)[`Settings.include()`] method to include a project in your Gradle settings file, you typically include projects by supplying the directory name like `include("featureA")`.
 This usage assumes that `featureA` is located at the root of your build.
 
-You can also include projects located in subdirectories using hierarchical paths with the `:` charactor as a separator.
+You can include projects located in subdirectories using hierarchical paths, with `:` as the separator. 
 This allows you to organize large builds containing many projects to improve comprehensibility, versus having all your projects live at the root of the build.
 For instance, if project `search` was located in a subdirectory named `features`, itself located in a subdirectory named `subs`, you could call `include(":subs:features:search")` to include it.
 
