--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -774,7 +774,7 @@ This usage assumes that `featureA` is located at the root of your build.
 
 You can include projects located in subdirectories using hierarchical paths, with `:` as the separator. 
 This is useful for organizing large builds with many projects, allowing for a clearer structure than having all projects at the root.
-For instance, if project `search` was located in a subdirectory named `features`, itself located in a subdirectory named `subs`, you could call `include(":subs:features:search")` to include it.
+For example, if the `search` project is located in `subs/features/search`, you can include it with: `include(":subs:features:search")`.
 
 However, without further configuration, Gradle will create empty projects for every element of the path.
 In the example above, Gradle will create a project named `:subs`, a project named `:subs:features`, and a project named `:subs:features:search`.
